# MyWork

./: LICENSE  README.md  binary_trees.py  box.py  exceptions_fileIO.py  hw_4_5_coding.py  linked_lists.py  standard_library.py
Coursework/: HW4_1_V2.py  binary_trees.py
DA/: la_housing.ipynb
DRL/: requirements.txt
DRL/DQN/: DQN.ipynb  Qlearn.ipynb  agent.py  algs.py  my_DQN.ipynb  requirements.txt  utils.py
DRL/policyGradient/: networks.py  policyGrad.ipynb  utils.py
Modeling_Data/: cancer_unet.ipynb
NLP/: something.txt
NLP/LING581_Project/: .gitignore  DPO.ipynb  RLHF.ipynb  eval_agent.py  pyproject.toml  stages.py  utils.py
NLP/LING581_Project/DPO_responses/: responses.json  responses2.json
NLP/LING581_Project/agent_eval/: responses2_eval.json  responses_eval.json
